fix bugs and upload notifications

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="facebook_app_id">756786132214258</string>
     <string name="fb_login_protocol_scheme">fb756786132214258</string>
     <string name="facebook_client_token">8e81619ce8b2b6a5701eabcc376f8f96</string>
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 </resources>
