refactor chat part one

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -80,7 +80,7 @@
     "sendProblem": "أرسل مشكلتك",
     "chat": "بدء محادثة",
     "Type a message": "اكتب رسالة",
-    "Tap lock to stop": "اضغط على القفل للتوقف",
+    "Tap lock to send": "اضغط على القفل للارسال",
     "Slide to cancel": "قم بالتمرير للإلغاء",
     "AboutText": "Things-Todo هو تطبيق بسيط وذكي يساعدك على إدارة جميع مهامك في مكان واحد. يمكنك العمل من خلال المهام الخاصة بك وإنشاء أي عدد من القوائم الإضافية لتنظيم عملك كمحلات البقالة والسفر والتسوق والأفلام لمشاهدتها ... في كل قائمة يمكنك إضافة العديد من المهام كما تريد. يحافظ على كل شيء على المسار الصحيح من خلال تحديد تواريخ الاستحقاق والتذكيرات لكل مهمة وتمييز المهام الأكثر أهمية بنجمة.",
     "User": "مستخدم",
@@ -108,5 +108,30 @@
     "Mark Done": "تم انجازه",
     "problemScussfully": "تم ارسال الشكوى الخاص بك بنجاح",
     "deleteNotify": "هل أنت متأكد من حذف هذا الإشعار",
-    "deleteAllNotifications": "هل أنت متأكد من جميع الإشعارات"
+    "deleteAllNotifications": "هل أنت متأكد من جميع الإشعارات",
+    "image_picker_exit_without_selecting": "هل تريد الخروج بدون اختيار الصور ؟",
+    "image_picker_confirm": "تأكيد الصورة المختارة",
+    "yes": "نعم",
+    "no": "لا",
+    "image_picker_select_images_title": "عدد الصور المختارة",
+    "image_picker_select_images_guide": "",
+    "image_picker_camera_title": "الكاميرا",
+    "image_picker_album_title": "الألبوم",
+    "image_picker_preview_title": "عرض",
+    "image_picker_confirm_delete": "هل تريد حذف هذه الصورة ؟",
+    "image_picker_confirm_reset_changes": "هل تريد مسح كافة التغييرات لهذه الصورة ؟",
+    "image_picker_no_images": "لا توجد صور",
+    "image_picker_image_crop_title": "قص الصورة",
+    "image_picker_image_filter_title": "الفلتر",
+    "image_picker_image_edit_title": "تعديل الصورة",
+    "image_picker_select_button_title": "اختيار",
+    "image_picker_image_sticker_title": "ملصق الصورة",
+    "image_picker_image_addtext_title": "إضافة نص للصورة",
+    "image_picker_image_sticker_guide": "",
+    "image_picker_edit_text": "تعديل النص",
+    "image_picker_request_permission": "التحقق من الاذونات",
+    "image_picker_request_camera_permission": "",
+    "image_picker_exposure_title": "",
+    "image_picker_exposure_auto_title": "",
+    "image_picker_exposure_locked_title": ""
 }
