--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -80,7 +80,7 @@
     "sendProblem": "Send your problem",
     "chat": "Start a conversation",
     "Type a message": "Type a message",
-    "Tap lock to stop": "Tap lock to stop",
+    "Tap lock to send": "Tap lock to send",
     "Slide to cancel": "Slide to cancel",
     "AboutText": "Things-Todo is a simple and intelligent app that helps you manage all your tasks in one place. You can work through your tasks and create any number of additional lists to organize your work, groceries, travel, shopping, movies to watch ... In each list you can add as many tasks as you like. Keep everything on track by setting due dates and reminders for each task and starring your most important tasks.",
     "User": "User",
@@ -108,5 +108,30 @@
     "Mark Done": "Mark Done",
     "problemScussfully": "Your problem has been submitted successfully",
     "deleteNotify": "Are you sure to delete this notification",
-    "deleteAllNotifications": "Are you sure to all notifications"
+    "deleteAllNotifications": "Are you sure to all notifications",
+    "image_picker_exit_without_selecting": "Do you want to exit without selecting images ?",
+    "image_picker_confirm": "Picked image confirm",
+    "yes": "yes",
+    "no": "no",
+    "image_picker_select_images_title": "Selected images count",
+    "image_picker_select_images_guide": "",
+    "image_picker_camera_title": "Camera",
+    "image_picker_album_title": "Album",
+    "image_picker_preview_title": "Preview",
+    "image_picker_confirm_delete": "Do you want to delete this image ?",
+    "image_picker_confirm_reset_changes": "Do you want to clear all changes for this image ?",
+    "image_picker_no_images": "No images...",
+    "image_picker_image_crop_title": "Image crop",
+    "image_picker_image_filter_title": "Image filter",
+    "image_picker_image_edit_title": "Image edit",
+    "image_picker_select_button_title": "Select",
+    "image_picker_image_sticker_title": "Image sticker",
+    "image_picker_image_addtext_title": "Image add text",
+    "image_picker_image_sticker_guide": "",
+    "image_picker_edit_text": "Edit text",
+    "image_picker_request_permission": "Check permission",
+    "image_picker_request_camera_permission": "",
+    "image_picker_exposure_title": "",
+    "image_picker_exposure_auto_title": "",
+    "image_picker_exposure_locked_title": ""
 }
