--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -133,5 +133,8 @@
     "image_picker_request_camera_permission": "",
     "image_picker_exposure_title": "",
     "image_picker_exposure_auto_title": "",
-    "image_picker_exposure_locked_title": ""
+    "image_picker_exposure_locked_title": "",
+    "Problem from user": "Problem from user",
+    "Message from user": "Message from user",
+    "Click to check it !": "Click to check it !"
 }
